--- a/react_portfolio/package.json
+++ b/react_portfolio/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "betterbacks": "^0.0.0-beta.1",
+    "bubbly-bg": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
