--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-
     "bubbly-bg": "^1.0.0",
+    "fsevents": "^2.1.2",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-materialize": "^2.6.0",
     "react-scripts": "2.1.3",
     "react-scroll": "^1.7.11"
